[package]
name = "new_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*",
]

[dependencies]
rusty_internal = { path = "crates/rusty_internal", version = "0.0.1", default-features = true }